--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! This is Suriya.
             
-            <h3 align="left">My Intrest </h3>
+            <h3 align=left>My Intrest </h3>
             I Love Coding
         </div>
         <script type="text/javascript" src="/ui/main.js">
