--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! This is Suriya.
             
             <h3 align=left>My Intrest </h3>
-            I Love Coding
+           <h1> I Love Coding</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
