--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-        </a href="nsuriya239.imad.hasura-app.io"<img src="/ui/images.png" class="img"/>>
+        <a href="nsuriya239.imad.hasura-app.io"><img src="/ui/images.png" class="img"/></a>
         </div>
         <br>
         <div class="center text-big bold">
