[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="center">
-        <a href="nsuriya239.imad.hasura-app.io"><img src="/ui/images.png" class="img"/></a>
+        <img src="/ui/images.png" class="img"/>
         </div>
         <br>
         <div class="center text-big bold">
             Hi! This is Suriya.
-            
+            <a href="/ui/profile.html">Touch Me</a>
             <h3 align=left>My Intrest </h3>
            <h5> I Love Coding</h5>
         </div>
